tests/snapshots/integration__missing_content_type_header.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /pets missing_content_type_header" time="0.00">
            <system-out>
[[PROPERTY|correlationId=missing_content_type_header]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=listPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|statusCode=200]]
correlationId=missing_content_type_header
method=GET
operationId=listPets
path=/pets
statusCode=200
            </system-out>
            <failure type="MissingContentTypeHeader" message="error">Response did not include a Content-Type header</failure>
        </testcase>
    </testsuite>
</testsuites>
