tests/snapshots/integration__path_not_found.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /pet path_not_found" time="0.00">
            <system-out>
[[PROPERTY|correlationId=path_not_found]]
[[PROPERTY|method=GET]]
[[PROPERTY|path=/pet]]
[[PROPERTY|statusCode=404]]
            </system-out>
            <failure type="PathNotFound" message="failure">
[[PROPERTY|correlationId=path_not_found]]
[[PROPERTY|method=GET]]
[[PROPERTY|path=/pet]]
[[PROPERTY|statusCode=404]]

Failure message:
Path not found
            </failure>
        </testcase>
    </testsuite>
</testsuites>
